Fix linter issues

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,6 +23,11 @@ linters:
     - exhaustruct
     - nonamedreturns
     - nosnakecase
+    - testableexamples
+    - sqlclosecheck
+    - varcheck
+    - structcheck
+    - deadcode
 linters-settings:
   exhaustive:
     default-signifies-exhaustive: true
